--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 html,
 body {
+  color-scheme: dark;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
@@ -13,7 +14,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #49f;
   text-decoration: none;
 }
 
