--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,18 @@
-html,
+html {
+  font-size: 1.25rem;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
 body {
-  color-scheme: dark;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans','Helvetica Neue', sans-serif;
   line-height: 1.6;
-  font-size: 18px;
 }
 
 * {
